kuberbetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: myflask-microservice
  labels:
    app: myflask-restapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myflask-restapp
  template:  
    metadata:
      labels: 
        app: myflask-restapp
    spec:
      containers:
        - name: myflask-restapp
          image: myflaskapp:1.0.0  
          ports: 
            - containerPort: 8095           
          livenessProbe:
            exec:
              command: 
                - /bin/sh
                - -c 
                - nc -z localhost 8095
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /myflask/health-status
              port: 8095
            initialDelaySeconds: 60
            periodSeconds: 10
