kuberbetes/MySQL.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: myflaskapp.cxojydmxwly6.us-east-1.rds.amazonaws.com
