kuberbetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-flask-app
spec:
  selector:
    app: your-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # Assuming your Flask app is running on port 5000
